# python_test

./: .env-example  Dockerfile  README.md  dao.py  database.py  docker-compose.yml  docker_function.py  dz2.py  dz3.py  iss_positions.csv  iss_tracker.py  main.py  main2.py  models.py  pyproject.toml  rpojject.txt  settings.py
api/: api_router_auth.py  schemas_user.py
migrations/versions/: 2023_12_25_1104-2fca43402ba5_inital.py  2023_12_25_1136-3e89c7d97ca1_add_adress.py  2023_12_25_1203-f612ed7bfeb2_add_index.py  2023_12_25_1212-48838b987dd6_add_street_and_default.py  2024_02_11_1109-58c5fc593180_init.py
templates/: cart.html  index.html
web/: web_router.py
